--- a/MyBlog.html
+++ b/MyBlog.html
@@ -2,26 +2,27 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
         <title>
-            DreamBlog
+            DreamZone
         </title>
     </head>
     <body background="autumn.jpg">
         <h1>
-            追梦者的部落格
+            追梦者的一片天
         </h1>
         <h3>
             也许人生就是一场梦
         </h3>
         <p>
             <font size="+1" color="green">
-                博主姓名：周&nbsp;攀<br/>
-                博主爱好：电影&nbsp;|&nbsp;音乐&nbsp;|&nbsp;旅行<br/>
+                姓名：周&nbsp;攀<br/>
+                爱好：电影&nbsp;|&nbsp;音乐&nbsp;|&nbsp;旅行<br/>
             </font>
         </p>
-        <IMG src="1.jpg" alt="最向往的生活" width="300" height="150" align="middle">
+        <IMG src="1.jpg" alt="最向往的生活" width="300" height="150" align="middle"><br/>
+        <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=280 height=330 src="http://music.163.com/outchain/player?type=0&id=93447241&auto=1&height=430"></iframe>
         <p>
             <font size="+1" color="red">
-                CopyRight &copy; 2016&nbsp;&lt;追梦者&gt;&nbsp;All Right
+                CopyRight &copy; 2016&nbsp;&lt;追梦者&gt;&nbsp;All Right 陕ICP备15014997号
             </font>
         </p>
 </html>
